test/classes/deitz/test_type_in_class3.good
test_type_in_class3.chpl:12: error: unresolved call 'node(int).element_type'
test_type_in_class3.chpl:2: note: candidates are: :node.element_type
